--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="phaser.js"></script>
+    <script src="cdn.jsdelivr.net/npm/phaser@3.70.0/dist/phaser.min.js"></script>
     <title>Клеточная Одиссея</title>
     <style>
         html,
