--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 default: 'arcade',
                 arcade: {
                     gravity: { y: 100 },
-                    debug: true
+                    debug: false
                 }
             },
             scene: Example
@@ -249,7 +249,7 @@
         }
     </script>
 
-    <h1>Не режь сломанные машины</h1>
+    <h1>Ломай то, что не сломано</h1>
     <button onclick="save_result()">Сохранить</button>
     <div id="game"></div>
 
